updated gems and cleaning up layout issues

--- a/app/assets/stylesheets/screen.sass
+++ b/app/assets/stylesheets/screen.sass
@@ -71,7 +71,7 @@ body
       text-decoration: none
 
 #push
-  padding-top: 300px
+  padding-top: 250px
 .footer
   height: 35px
   width: 600px
